FINALLY FIXED IPHONE OVERFLOW ISSUES!!!! For future reference, when trying to hide overflow(x,y) on the <body, html> tag, you have to set position:absolute/etc/etc. It took me 3 days to figure this out...

--- a/assets/main.css
+++ b/assets/main.css
@@ -648,6 +648,7 @@ body {
   border-radius: 35px;
 
   max-height: 60vh;
+  min-height: 3vh;
   margin-top: 2%;
   margin-left: auto;
   margin-right: auto;
@@ -694,7 +695,7 @@ body {
 .contact-form {
   width: 100%;
   height: 50%;
-  margin-top: 5%;
+  margin-top: 9%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -749,11 +750,12 @@ form button {
   border-radius: 10px;
 }
 
-@media (max-width: 450px) {
+
+@media (max-width: 449px) {
   .landing-content {
     font-size: 20px;
     width: 100%;
-    margin-top: 65vh;
+    margin-top: 62vh;
   
   }
 
@@ -813,7 +815,9 @@ form button {
 }
 
 /* handling older phones with shorter screen sizes */
-@media (max-height: 700px) {
+@media screen
+  and (max-height: 700px)
+  and (orientation: landscape) {
 
   .landing-content{
     margin-top: 60vh;
@@ -829,7 +833,12 @@ form button {
   
   .landing-content {
     font-size:  20px;
-    margin-bottom: 10%;
+    bottom: 15px;
+  }
+
+  .landing-content > p {
+    padding-left: 10%;
+    padding-right: 10%;
   }
 
   .about-content {
@@ -847,12 +856,11 @@ form button {
     font-size: 16px;
 
     border-radius: 35px;
-    margin-top: 15vh;
-    margin-bottom: 2%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: -40px;
 
-    max-width: 550px;
+    max-width: 650px;
     overflow-y: scroll;
     
   }
@@ -872,8 +880,9 @@ form button {
     
   }
 
+
   form {
-    margin-top: 25%;
+    margin-top: 10%;
     margin-bottom: 0;
     height: 280px;
 
@@ -917,14 +926,9 @@ form button {
     margin-top: -10vh;
   }
 
-  .contact-form {
-    margin-top: -65vh;
-  }
 
 }
 
-
-/* iPad landscape */
 @media screen 
   and (device-width: 1080px)
   and (device-height: 810px)
@@ -939,14 +943,16 @@ form button {
   }
 
   .services-content {
-    margin-top: 50px;
+    margin-top: 5vh;
   }
 
   .contact-form {
-    margin-top: 45px;
+    margin-top:20vh;
   }
 
 }
+
+
 
 
 /* ------NAVBAR----- */
